--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainContainer{
   display: flex;
   flex-direction: column;
+}
+
+header{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 200px;
+  /* text-align: center; */
+  font-size: 50px;
+  border: 1px solid black;
+  
 }
 
-.App-link {
-  color: #61dafb;
+section{
+  display: flex;
+}
+nav{
+  /* flex: 1; */
+  padding: 30px 60px 20px 20px;
+  border: 1px solid black;
+} 
+article{
+  flex: 1;
+  border: 1px solid black;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li{
+  list-style-type: none;
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  font-size: 30px;
+  border: 1px solid black;
 }
